added project features.

--- a/wp.tex
+++ b/wp.tex
@@ -197,10 +197,10 @@ with a specific distribution smart contract, often referred to as a vesting cont
 the token issuance and introduces vestings and locks at the code level. However, altering the conditions of vestings requires 
 redeploying the contract, which can make the transaction more costly due to the complex logic. Despite this, there are other 
 intricate ways to manage the distribution:
-\item [1.] Custodial Solutions: Centralized services like crypto exchanges or custodians can offer tools for handling airdrop vesting 
+\item[1] Custodial Solutions: Centralized services like crypto exchanges or custodians can offer tools for handling airdrop vesting 
 on behalf of projects. They handle the storage and gradual distribution of tokens based on a predetermined schedule.
 
-\item[2.] Multisignature Wallets: These wallets, which require multiple signatures for transactions, can be used to control the token 
+\item[2] Multisignature Wallets: These wallets, which require multiple signatures for transactions, can be used to control the token 
 release during vesting. It's a decentralized method, allowing several parties to manage the process together.
 
 Even though each of them partially solvesl described issues, neither one is perfect.
@@ -213,19 +213,28 @@ are:
 
 \begin{description}
   \item[XXXXXX]
-  To be written...
+  Every user can create a claim token without needing to install any application on their phone. This token allows them to request airdrops from 
+  projects without conducting on-chain transactions. The claim token is a hashed digital hardware fingerprint of the device and does not contain 
+  any personal data of the user. The technology used to generate a Claim-token ensures that the fingerprint is created on the device itself, 
+  rather than being programmatically generated.
 
   \item[XXXXXX]
-  To be written...
+  Using a digital fingerprint, a user can create an anonymous digital profile. This profile allows the integration of existing social networks and 
+  management of subscriptions to other users. It enables tracking of new content drops and completion of subscription quests. With just one click, 
+  users can connect with social networks and the project community.
 
   \item[XXXXXX]
-  To be written...
+  The human-proof approach is used in the process of generating backup codes or restoring a claim-token to protect against artificially created 
+  identities. The backup code allows you to transfer your token and profile to another device.
 
   \item[XXXXXX]
-  To be written...
+  For token holders and advertising companies, the system provides a secure means of token or crypto asset distribution through asset provisioning. 
+  This mechanism ensures secure binding of distribution for future use and allows flexible changes in vesting conditions or coin operation logic.
 
   \item[XXXXXX]
-  To be written...
+  The platform offers a safe and easy solution for automating token flow. It enables the creation of quest logic or activities for community members,
+  eliminating the need to manage token distribution manually. This greatly reduces the costs associated with maintaining community management 
+  departments within a project.
 \end{description}
 
 \subsection{Non-functional Requirements}
