next changes in formatting

--- a/books.bib
+++ b/books.bib
@@ -6,3 +6,12 @@
   year={2017},
   organization={ACM}
 }
+
+@misc{liang2024market,
+      title={Market Responses to Genuine Versus Strategic Generosity: An Empirical Examination of NFT Charity Fundraisers}, 
+      author={Chen Liang and Murat Tunc and Gordon Burtch},
+      year={2024},
+      eprint={2401.12064},
+      archivePrefix={arXiv},
+      primaryClass={econ.GN}
+}
