next changes in formatting

--- a/wp.tex
+++ b/wp.tex
@@ -345,9 +345,8 @@ Architecure is consisted of several essential parts:
 \label{fig:arch}
 \end{figure}
 
-\end{document}
 
-\subsection{Extensions}
+\section{Extensions}
 This document aims to outline a solution that revolutionizes 
 the distribution of coins within the web3 framework. We're seeking 
 to develop an innovative system that not only simplifies the process 
@@ -355,7 +354,7 @@ of token distribution but also addresses the inherent challenges of the
 current methodologies, such as cost inefficiency, 
 lack of flexibility, and complex management requirements. 
 
-\subsection{Acknowledgements}
+\section{Acknowledgements}
 \label{sec:ack}
 
 The document was originally created by Yurii Chudinov and Bohdan Snisar. 
