--- a/books.bib
+++ b/books.bib
@@ -15,3 +15,30 @@
       archivePrefix={arXiv},
       primaryClass={econ.GN}
 }
+
+@misc{rachamalla2023driver,
+      title={Driver Safety Reward with Cooperative Platooning using Blockchain}, 
+      author={Sruthi Rachamalla and Henry Hexmoor},
+      year={2023},
+      eprint={2312.02164},
+      archivePrefix={arXiv},
+      primaryClass={cs.NI}
+}
+
+@misc{wyczik2023property,
+      title={The Property Law of Crypto Tokens}, 
+      author={Jakub Wyczik},
+      year={2023},
+      eprint={2311.01461},
+      archivePrefix={arXiv},
+      primaryClass={cs.CR}
+}
+
+@misc{bachman2023incentivizing,
+      title={Incentivizing Gigaton-Scale Carbon Dioxide Removal via a Climate-Positive Blockchain}, 
+      author={Jonathan Bachman and Sujit Chakravorti and Shantanu Rane and Krishnan Thyagarajan},
+      year={2023},
+      eprint={2308.02653},
+      archivePrefix={arXiv},
+      primaryClass={cs.CR}
+}
