--- a/books.bib
+++ b/books.bib
@@ -1,44 +1,45 @@
-@inproceedings{shafagh2017,
-  title={Towards blockchain-based auditable storage and sharing of IoT data},
-  author={Shafagh, Hossein and Burkhalter, Lukas and Hithnawi, Anwar and Duquennoy, Simon},
-  booktitle={Proceedings of the 2017 on Cloud Computing Security Workshop},
-  pages={45--50},
-  year={2017},
-  organization={ACM}
-}
-
-@misc{liang2024market,
-      title={Market Responses to Genuine Versus Strategic Generosity: An Empirical Examination of NFT Charity Fundraisers}, 
-      author={Chen Liang and Murat Tunc and Gordon Burtch},
-      year={2024},
-      eprint={2401.12064},
-      archivePrefix={arXiv},
-      primaryClass={econ.GN}
-}
-
-@misc{rachamalla2023driver,
-      title={Driver Safety Reward with Cooperative Platooning using Blockchain}, 
-      author={Sruthi Rachamalla and Henry Hexmoor},
+@misc{ziegler2023navigating,
+      title={Navigating the Research Landscape of Decentralized Autonomous Organizations: A Research Note and Agenda}, 
+      author={Christian Ziegler and Quinn DuPont},
       year={2023},
-      eprint={2312.02164},
+      eprint={2312.17197},
       archivePrefix={arXiv},
-      primaryClass={cs.NI}
+      primaryClass={cs.CY}
 }
 
-@misc{wyczik2023property,
-      title={The Property Law of Crypto Tokens}, 
-      author={Jakub Wyczik},
+@misc{messias2023airdrops,
+      title={Airdrops: Giving Money Away Is Harder Than It Seems}, 
+      author={Johnnatan Messias and Aviv Yaish and Benjamin Livshits},
       year={2023},
-      eprint={2311.01461},
+      eprint={2312.02752},
       archivePrefix={arXiv},
       primaryClass={cs.CR}
 }
 
-@misc{bachman2023incentivizing,
-      title={Incentivizing Gigaton-Scale Carbon Dioxide Removal via a Climate-Positive Blockchain}, 
-      author={Jonathan Bachman and Sujit Chakravorti and Shantanu Rane and Krishnan Thyagarajan},
-      year={2023},
-      eprint={2308.02653},
+@inproceedings{Fan_2023, series={CHI ’23},
+   title={Altruistic and Profit-oriented: Making Sense of Roles in Web3 Community from Airdrop Perspective},
+   url={http://dx.doi.org/10.1145/3544548.3581173},
+   DOI={10.1145/3544548.3581173},
+   booktitle={Proceedings of the 2023 CHI Conference on Human Factors in Computing Systems},
+   publisher={ACM},
+   author={Fan, Sizheng and Min, Tian and Wu, Xiao and Cai, Wei},
+   year={2023},
+   month=apr, collection={CHI ’23} }
+
+
+@misc{liu2022fighting,
+      title={Fighting Sybils in Airdrops}, 
+      author={Zheng Liu and Hongyang Zhu},
+      year={2022},
+      eprint={2209.04603},
       archivePrefix={arXiv},
       primaryClass={cs.CR}
+}
+
+@misc{semaphore_pse_dev,
+  title = {{Semaphore - Platform for Systems Engineering}},
+  author = {{PSE Group}},
+  howpublished = {\url{https://semaphore.pse.dev}},
+  year = {2024},
+  note = {Accessed: 19/03/2024}
 }
